fix eps being cut off

--- a/client/css/desktop.css
+++ b/client/css/desktop.css
@@ -27,6 +27,7 @@ height: 50px;
 
 .container, .container3 {
 margin-top: -20px;
+margin-bottom: 60px;
 }
 
 .icon {
